app/assets/stylesheets/j3_autocomplete.sass
.j3_autocomplete
  .j3_autocomplete__search
    border: 0
    width: 100%
    padding: 0.25rem 1.25rem
    outline: none
  a[data-toggle="dropdown"]
    text-decoration: none
    color: black
    &:hover
      color: black
  .dropdown-menu
    width: 100%
    margin-top: -1px
    border-radius: 0
    border: 0
    border-top: 1px solid blue
    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12)
    .records
      max-height: 40vh
      overflow-y: auto
      .dropdown-item
        cursor: pointer

